[gd_scene load_steps=2 format=3 uid="uid://34qf63wljga8"]

[ext_resource type="Script" path="res://boss/behavior.gd" id="1_gfmlx"]

[node name="Behavior" type="Node"]
script = ExtResource("1_gfmlx")

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[node name="PreparationTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
[connection signal="timeout" from="PreparationTimer" to="." method="_on_preparation_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
