extends Node

class_name Behavior

#-----------------------------------------------------------------------------------------------------------------------
signal preparing_attack
signal attacking
signal idling

#-----------------------------------------------------------------------------------------------------------------------
var apm = 10.0:
    set = set_apm

#-----------------------------------------------------------------------------------------------------------------------
func _ready() -> void:
    _idle()
#end

#-----------------------------------------------------------------------------------------------------------------------
func _process(delta: float) -> void:
    delta = delta
#end

#-----------------------------------------------------------------------------------------------------------------------
func set_apm(data: float):
    apm = data
#end

#-----------------------------------------------------------------------------------------------------------------------
func _on_idle_timer_timeout() -> void:
    _prepare_attack()
#end

#-----------------------------------------------------------------------------------------------------------------------
func _on_preparation_timer_timeout() -> void:
    _attack()
#end

#-----------------------------------------------------------------------------------------------------------------------
func _on_attack_timer_timeout() -> void:
    _idle()
#end

#-----------------------------------------------------------------------------------------------------------------------
func _prepare_attack() -> void:
    preparing_attack.emit()
    $PreparationTimer.start(1.0)
#end

#-----------------------------------------------------------------------------------------------------------------------
func _attack() -> void:
    attacking.emit()
    $AttackTimer.start(0.2)
#end

#-----------------------------------------------------------------------------------------------------------------------
func _idle() -> void:
    idling.emit()
    $IdleTimer.start((60.0 / apm) - 1.2)
#end
